[project]
name = "urllib3_sigv4"
version = "0.4.0"
description = "Extension to urllib3 adding support for AWS Signature Version 4"
readme = "README.md"
keywords = ["urllib", "aws", "sigv4"]
authors = [{ name = "Tomáš Linhart", email = "pasmen@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
urls = { Homepage = "https://github.com/tlinhart/urllib3-sigv4" }
requires-python = ">=3.8"
dependencies = ["boto3>=1.3.1,<1.36.0", "urllib3>=2.0.0,<3.0.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
urllib3_sigv4 = ["py.typed"]

[tool.ruff]
cache-dir = "~/.cache/ruff"
line-length = 79
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
filterwarnings = ["error", "ignore::DeprecationWarning:botocore"]
